--- a/motivateme/app/pages/home/home.html
+++ b/motivateme/app/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-content padding class="home">
   <ion-grid class="home-grid">
     <ion-row class="home-gridRow">
-      <button class="home-button" large clear (click)="click($event)">Motivate Me</button>
+      <button class="home-button" large clear (click)="click($event)">Quotimotivate Me!</button>
     </ion-row>
   </ion-grid>
 </ion-content>
