--- a/motivateme/app/pages/home/home.html
+++ b/motivateme/app/pages/home/home.html
@@ -1,7 +1,8 @@
 <ion-content padding class="home">
+  <clip-group [clips]="clips"></clip-group>
   <ion-grid class="home-grid">
     <ion-row class="home-gridRow">
-      <button class="home-button" large clear (click)="click($event)">Quotimotivate Me!</button>
+      <button class="home-button" large dark (click)="click($event)">Quotimotivate Me!</button>
     </ion-row>
   </ion-grid>
 </ion-content>
